--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -1,62 +1,108 @@
 {% extends 'home/base.html' %}
 {% load static %}
 {% block content %}
+
+<!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <div class="container mt-2">
     <a href="{% url 'projects' %}" class="btn btn-primary mb-2">Back</a>
     <div class="row">
-        
+
         <div class="col-6 ">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     {% for image in images %}
-                  <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
-                  {% endfor %}
+                    <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
+                        class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+                    {% endfor %}
                 </ol>
                 <div class="carousel-inner">
                     {% for image in images %}
                     <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
-                        <img src="/media/{{image.image}}" class="img-fluid"  alt="">
+                        <img src="/media/{{image.image}}" class="img-fluid" alt="">
                     </div>
-                  {% endfor %}
+                    {% endfor %}
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
                 </a>
             </div>
         </div>
         <div class="col-md-6 col-12">
-            <h3 >Title | {{project.title}}</h3>
-            <h3 >Details | {{project.details}}</h3>
-            <h3 >category | {{category.name}}</h3>
-            <h3 >Total Target | {{project.total_target}}</h3>
-            <h3 >Tags | {% for tag in tags %} {{tag.tag}} {% endfor %}</h3>
+            <h3>Title | {{project.title}}</h3>
+            <h3>Details | {{project.details}}</h3>
+            <h3>category | {{category.name}}</h3>
+            <h3>Total Target | {{project.total_target}}</h3>
+            <h3>Total Donate | {{project.total_donate}}</h3>
+
+            <h3>Tags | {% for tag in tags %} {{tag.tag}} {% endfor %}</h3>
             <h3>Rate | <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
             </h3>
 
             <h3>Total Rate | <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-             </h3>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </h3>
         </div>
+        <div style="margin-left:5%;">
+            <a class="btn btn-danger" href="{% url 'create_report_project' project.id %}">Report</a>
+            <button id="second" type="button" class="  col-1 col-md-1 btn btn-success" data-toggle="modal"
+                data-target="#exampleModal">Donate </button>
+
+            <a class="btn btn-warning" href="{% url 'project_rate' project.id %}">Rate</a>
+        </div>
+
     </div>
-    
-   <div class="my-2">
-    <h2>Comments</h2>
-    <a class="btn btn-success mb-2 float-right" href="{% url 'new_comment' project.id %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-      </svg></a>
+    <!--  -->
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <form method="POST" novalidate>
+                        {% csrf_token %}
+                        {{formm.as_p}}
+                        <button type="submit" class="btn btn-success">Add</button>
+
+                    </form>
+
+
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+</div>
+
+
+<!--  -->
+<div class="my-2">
+
+    <a class="btn btn-success mb-2 float-right" href="{% url 'new_comment' project.id %}"><svg
+            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle"
+            viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+            <path
+                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+        </svg></a>
+
+
 
     <table class="table table-bordered">
         <thead class="thead-dark">
@@ -67,35 +113,6 @@
                 <th>Action</th>
             </tr>
         </thead>
-
-            <td>
-                {% for image in images %}
-                <img src="/media/{{image.image}}" width="50px" alt="">
-                {% endfor %}
-            </td>
-            <td>
-                {% for tag in tags %}
-                <span>{{tag.tag}} | </span>
-
-                {% endfor %}
-            </td>
-            <td>
-                <a href="{% url 'create_report_project' project.id %}">Report</a>
-                <a href="{% url 'new_donate' project.id %}">Donate</a>
-                <a href="{% url 'new_rate' project.id %}">Rate</a>
-
-
-            </td>
-
-        </tr>
-    </tbody>
-
-
-</table>
-<a href="{% url 'new_comment' project.id %}">add comment</a>
-
-<table class="table" style="border: 1px solid;">
-    <thead class="thead-dark">
         <tr>
 
             {% for comm in comments %}
@@ -105,56 +122,47 @@
 
 
             <td> <a href="{% url 'delete_comment' project.id  comm.id%}">Delete</a>
-            <a href=" {% url 'edit_comment' project.id comm.id %}">Edit</a>
-            <a href=" {% url 'create_report_comment' project.id comm.id %}">Report</a></td>
+                <a href=" {% url 'edit_comment' project.id comm.id %}">Edit</a>
+                <a href=" {% url 'create_report_comment' project.id comm.id %}">Report</a>
+            </td>
 
         </tr>
         {%endfor%}
 
     </table>
-   </div>
-   <div>
-    <h2>
-        Related Project
-    </h2>
-    <div class="row">
-        {% for images in related_projects_images %}
-        <div class="col-md-3 col-12">
-            <div class="card">
-                    <img class="card-img-top" src="/media/{{images.image}}" alt="Card image cap">
-                    <div class="card-body">
-                    <h5 class="card-title">{{images.project.title}}</h5>
-                    <p class="card-text">{{images.project.details}}</p>
-                    <a href="{% url 'viewProject' images.project_id %}" class="btn btn-link">View Project</a>
-                    </div>
-                    
-              </div>
+
+</div>
+
+<div class="row">
+    {% for images in related_projects_images %}
+    <div class="col-md-3 col-12">
+        <div class="card">
+            <img class="card-img-top" src="/media/{{images.image}}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{images.project.title}}</h5>
+                <p class="card-text">{{images.project.details}}</p>
+                <a href="{% url 'viewProject' images.project_id %}" class="btn btn-link">View Project</a>
+            </div>
+
         </div>
-        {% endfor %}
     </div>
-   </div>
-</div>
-{% endblock %}
-</table>
-{% block content %}
-
-<form method="POST" novalidate>
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="btn btn-success">Add</button>
-
-</form>
+    {% endfor %}
 
 
 
 
-<div>
 
-    <button type="submit" class="fa fa-star fa-3x my_btn  checked" value="1" id="st1"></button>
-    <button type="submit" class="fa fa-star fa-3x my_btn checked" value="2" id="st2"></button>
-    <button type="submit" class="fa fa-star fa-3x  my_btn checked" value="3" id="st3"></button>
-    <button type="submit" class="fa fa-star fa-3x my_btn checked" value="4" id="st4"></button>
-    <button type="submit" class="fa fa-star fa-3x my_btn " value="5" id="st5"></button>
 
-</div>
-{%endblock%}
+
+
+
+    <form method="POST" novalidate style="margin-left: 15%;display: inline-block;">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit" class="btn btn-success">Add</button>
+
+    </form>
+
+
+
+    {%endblock%}
