--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -2,92 +2,122 @@
 {% load static %}
 {% block content %}
 
-<!-- Latest compiled and minified CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<div class="container mt-2">
-    <a href="{% url 'projects' %}" class="btn btn-primary mb-2">Back</a>
-    <div class="row">
+<style>
+    .checked {
+        color: orange;
+    }
 
-        <div class="col-6 ">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    {% for image in images %}
-                    <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
-                        class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
-                    {% endfor %}
-                </ol>
-                <div class="carousel-inner">
-                    {% for image in images %}
-                    <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
-                        <img src="/media/{{image.image}}" class="img-fluid" alt="">
+    .my_btn {
+        background-color: inherit !important;
+        border: 0 !important;
+
+    }
+</style>
+
+
+<div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <div class="container mt-2">
+        <a href="{% url 'projects' %}" class="btn btn-primary mb-2">Back</a>
+        <div class="row">
+
+            <div class="col-6 ">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        {% for image in images %}
+                        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}"
+                            class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+                        {% endfor %}
+                    </ol>
+                    <div class="carousel-inner">
+                        {% for image in images %}
+                        <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                            <img src="/media/{{image.image}}" class="img-fluid" alt="">
+                        </div>
+                        {% endfor %}
                     </div>
-                    {% endfor %}
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
-        </div>
-        <div class="col-md-6 col-12">
-            <h3>Title | {{project.title}}</h3>
-            <h3>Details | {{project.details}}</h3>
-            <h3>category | {{category.name}}</h3>
-            <h3>Total Target | {{project.total_target}}</h3>
-            <h3>Total Donate | {{project.total_donate}}</h3>
+            <div class="col-md-6 col-12">
+                <h3>Title | {{project.title}}</h3>
+                <h3>Details | {{project.details}}</h3>
+                <h3>category | {{category.name}}</h3>
+                <h3>Total Target | {{project.total_target}}</h3>
+                <h3>Total Donate | {{project.total_donate}}</h3>
 
-            <h3>Tags | {% for tag in tags %} {{tag.tag}} {% endfor %}</h3>
-            <h3>Rate | <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-            </h3>
+                <h3>Tags | {% for tag in tags %} {{tag.tag}} {% endfor %}</h3>
+                <h3>Rate |
 
-            <h3>Total Rate | <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-            </h3>
-        </div>
-        <div style="margin-left:5%;">
-            <a class="btn btn-danger" href="{% url 'create_report_project' project.id %}">Report</a>
-            <button id="second" type="button" class="  col-1 col-md-1 btn btn-success" data-toggle="modal"
-                data-target="#exampleModal">Donate </button>
-
-            <a class="btn btn-warning" href="{% url 'project_rate' project.id %}">Rate</a>
-        </div>
-
-    </div>
-    <!--  -->
-
-
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-
-                    <form method="POST" novalidate>
+                    <form class="rate-form" style="display: inline" action="{% url 'viewProject' object.id %}"
+                        method="POST" id={{object.id}}>
                         {% csrf_token %}
-                        {{formm.as_p}}
-                        <button type="submit" class="btn btn-success">Add</button>
-
+                        <button type="submit" class="fa fa-star  my_btn  " value="1" id="st1"></button>
+                        <button type="submit" class="fa fa-star   my_btn " value="2" id="st2"></button>
+                        <button type="submit" class="fa fa-star    my_btn " value="3" id="st3"></button>
+                        <button type="submit" class="fa fa-star  my_btn " value="4" id="st4"></button>
+                        <button type="submit" class="fa fa-star  my_btn " value="5" id="st5"></button>
                     </form>
 
+                    <span id="confirm-box">
+
+                    </span>
+                </h3>
 
 
+
+                <h3>Total Rate | <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </h3>
+            </div>
+            <div style="margin-left:5%;">
+                <a class="btn btn-danger" href="{% url 'create_report_project' project.id %}">Report</a>
+                <button id="second" type="button" class="  col-1 col-md-1 btn btn-success" data-toggle="modal"
+                    data-target="#exampleModal">Donate </button>
+
+                <a class="btn btn-warning" href="{% url 'project_rate' project.id %}">Rate</a>
+            </div>
+
+        </div>
+        <!--  -->
+
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+
+                        <form method="POST" novalidate>
+                            {% csrf_token %}
+                            {{formm.as_p}}
+                            <button type="submit" class="btn btn-success">Donate</button>
+
+                        </form>
+
+
+
+                    </div>
                 </div>
             </div>
-        </div>
 
+        </div>
     </div>
-</div>
 </div>
 
 
@@ -149,13 +179,6 @@
     {% endfor %}
 
 
-
-
-
-
-
-
-
     <form method="POST" novalidate style="margin-left: 15%;display: inline-block;">
         {% csrf_token %}
         {{form.as_p}}
@@ -163,6 +186,196 @@
 
     </form>
 
+    <!--  -->
 
 
-    {%endblock%}
+    <script>
+
+        console.log("enrter");
+        const one = document.getElementById("st1")
+        const two = document.getElementById("st2")
+        const three = document.getElementById("st3")
+        const four = document.getElementById("st4")
+        const five = document.getElementById("st5")
+
+        const form = document.querySelector('.rate-form')
+        const confirmBox = document.getElementById('confirm-box')
+        const csrf = document.getElementsByName('csrfmiddlewaretoken')
+
+        const handleStarSelect = (size) => {
+
+            const children = form.children
+            for (let i = 0; i < children.length; i++)
+                if (i <= size) {
+                    children[i].classList.add('checked')
+                }
+                else {
+                    children[i].classList.remove('checked')
+                }
+
+
+        }
+        handleStarSelect(2)
+        // console.log(one);
+        const handleSelect = (Selection) => {
+            switch (Selection) {
+                case 'st1': {
+                    // one.classList.add('checked')
+                    // two.classList.remove('checked')
+                    // three.classList.remove('checked')
+                    // four.classList.remove('checked')
+                    // five.classList.remove('checked')
+                    handleStarSelect(1)
+                    return
+                }
+                case 'st2': {
+                    // one.classList.add('checked')
+                    // two.classList.add('checked')
+                    // three.classList.remove('checked')
+                    // four.classList.remove('checked')
+                    // five.classList.remove('checked')
+                    handleStarSelect(2)
+                    return
+                }
+                case 'st3': {
+                    // one.classList.add('checked')
+                    // two.classList.add('checked')
+                    // three.classList.add('checked')
+                    // four.classList.remove('checked')
+                    // five.classList.remove('checked')
+                    handleStarSelect(3)
+                    return
+                }
+                case 'st4': {
+                    // one.classList.add('checked')
+                    // two.classList.add('checked')
+                    // three.classList.add('checked')
+                    // four.classList.add('checked')
+                    // five.classList.remove('checked')
+                    handleStarSelect(4)
+                    return
+                }
+                case 'st5': {
+                    // one.classList.add('checked')
+                    // two.classList.add('checked')
+                    // three.classList.add('checked')
+                    // four.classList.add('checked')
+                    // five.classList.add('checked')
+                    handleStarSelect(5)
+
+
+                }
+
+
+
+
+            }
+        }
+        const getNumericValue = (stringValue) => {
+
+            let nymericValue;
+            if (stringValue == 'st1') {
+
+                nymericValue = 1
+
+            }
+            else if (stringValue == 'st2') {
+
+                nymericValue = 2
+
+            }
+
+            else if (stringValue == 'st3') {
+
+                nymericValue = 3
+
+            }
+            else if (stringValue == 'st4') {
+
+                nymericValue = 4
+
+            }
+            else if (stringValue == 'st5') {
+
+                nymericValue = 5
+
+            }
+            else {
+
+                nymericValue = 0
+            }
+            return nymericValue
+        }
+        if (one) {
+            const arr = [one, two, three, four, five]
+            arr.forEach(item => item.addEventListener('mouseover', (event) => {
+
+                handleSelect(event.target.id);
+            }))
+
+            arr.forEach(item => item.addEventListener('click', (event) => {
+                const val = event.target.id
+                console.log(val);
+
+                form.addEventListener('submit', e => {
+                    e.preventDefault()
+                    const id = e.target.id
+                    console.log(id);
+                    const val_num = getNumericValue(val)
+
+                    $.ajax({
+
+                        type: 'POST',
+                        url: `/projects/view/${id}`,
+                        data: {
+
+                            'csrfmiddlewaretoken': csrf[0].value,
+                            'el_id': id,
+                            'val': val_num
+
+                        },
+                        success: function (response) {
+
+                            console.log(response);
+
+                            console.log(val_num);
+                            confirmBox.innerHTML = `${response.value} stars`
+
+                        },
+                        error: function (error) {
+                            console.log(val_num);
+                            console.log(error);
+                            confirmBox.innerHTML = 'UPS.........something went wrong'
+
+                        }
+
+
+
+
+
+
+                    })
+
+
+
+                })
+
+            }))
+
+
+        }
+
+
+
+    </script>
+    {% endblock %}
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
