--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -79,11 +79,12 @@
 
 
 
-                <h3>Total Rate | <span class="fa fa-star checked"></span>
+                <h3>Total Rate | <span class="fa fa-star checked"> </span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star"></span>
                     <span class="fa fa-star"></span>
+                    <span class="">{{test.0.average_rating}} </span>
                 </h3>
             </div>
             <div style="margin-left:5%;">
