--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -1,6 +1,8 @@
 {% extends 'home/base.html' %}
+{% load bootstrap4 %}
 {% load static %}
 {% block is_authenticated %}
+
 <div class="container">
 <style>
     .checked {
@@ -62,7 +64,7 @@
                 <h3>Tags | {% for tag in tags %} {{tag.tag}} {% endfor %}</h3>
                 <h3>Rate |
 
-                    <form class="rate-form" style="display: inline" action="{% url 'viewProject' object.id %}"
+                    <form class="rate-form" style="display: inline" action="{% url 'viewProject'  project.id   %}"
                         method="POST" id={{object.id}}>
                         {% csrf_token %}
                         <button type="submit" class="fa fa-star  my_btn  " value="1" id="st1"></button>
@@ -88,7 +90,12 @@
                 </h3>
             </div>
             <div style="margin-left:5%;">
-                <a class="btn btn-danger" href="{% url 'create_report_project' project.id %}">Report</a>
+
+                   <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModall">
+                             Report
+                   </button>
+
+<!--                <a class="btn btn-danger" href="{% url 'create_report_project' project.id %}">Report</a>-->
                 <button id="second" type="button" class="  col-1 col-md-1 btn btn-success" data-toggle="modal"
                     data-target="#exampleModal">Donate </button>
 
@@ -152,10 +159,47 @@
             <td> {{comm.Create_db}}</td>
 
 
+
+
             <td> <a href="{% url 'delete_comment' project.id  comm.id%}">Delete</a>
                 <a href=" {% url 'edit_comment' project.id comm.id %}">Edit</a>
-                <a href=" {% url 'create_report_comment' project.id comm.id %}">Report</a>
+                 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalll">
+                             Report
+                   </button>
+
+
+<!--      MODAL FOR COMMENT           -->
+                <div class="modal fade" id="exampleModalll" tabindex="-1" aria-labelledby="exampleModalLabelll" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+<!--                        {% url 'create_report_project' project.id  %}-->
+
+                        <form method="POST" novalidate action="{% url 'viewProject1' project.id comm.id %}">
+                            {% csrf_token %}
+
+                            {%  bootstrap_form  formReportComment     %}
+
+
+                     <button  class="btn btn-primary" type="submit">Report Comment</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+<!--                END OF MODAL FOR COMMENT -->
+
             </td>
+
 
         </tr>
         {%endfor%}
@@ -181,23 +225,38 @@
     </div>
 
 
-
-
- 
-
-
     <form method="POST" novalidate style="margin-left: 15%;display: inline-block;">
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit" class="btn btn-success">Add</button>
 
     </form>
-
-    <!--  -->
-
 </div>
-    <script>
+<!--/**********************************************************************-->
 
+       <div class="modal fade" id="exampleModall" tabindex="-1" aria-labelledby="exampleModalLabell" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+<!--                        {% url 'create_report_project' project.id  %}-->
+
+                        <form method="POST" novalidate action="{% url 'viewProject' project.id %}">
+                            {% csrf_token %}
+                            {%  bootstrap_form  formReportProject     %}
+
+
+                     <button  class="btn btn-primary" type="submit">Report project</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<!--************************************************************-->
+
+<!--//////////////////////////////////////////////////-->
+
+    <script>
         console.log("enrter");
         const one = document.getElementById("st1")
         const two = document.getElementById("st2")
@@ -375,6 +434,8 @@
 
 
     </script>
+
+
 
 {% endblock %}
 
