--- a/CrowdFunding/reports/templates/reports/create_comment.html
+++ b/CrowdFunding/reports/templates/reports/create_comment.html
@@ -1,22 +1,22 @@
-{% extends 'home/base.html' %}
-{% load static %}
-{% block is_authenticated %}
+<!--{% extends 'home/base.html' %}-->
+<!--{% load static %}-->
+<!--{% block is_authenticated %}-->
 
-<div class="container d-flex justify-content-center">
-
-
-            <form action="{% url 'create_report_comment' projectId commentId %}"  class="post-form" method="post">
-                {% csrf_token %}
-
-                <div class="form-group">
-                     {{ form.title }}
-                </div>
-                <div class="form-group">
+<!--<div class="container d-flex justify-content-center">-->
 
 
-                     {{ form.body_comment }}
-                </div>
-                <button  class="btn btn-primary" type="submit">Report comment</button>
-            </form>
-          </div>
-{% endblock  %}
+<!--            <form action="{% url 'create_report_comment' projectId commentId %}"  class="post-form" method="post">-->
+<!--                {% csrf_token %}-->
+
+<!--                <div class="form-group">-->
+<!--                     {{ form.title }}-->
+<!--                </div>-->
+<!--                <div class="form-group">-->
+
+
+<!--                     {{ form.body_comment }}-->
+<!--                </div>-->
+<!--                <button  class="btn btn-primary" type="submit">Report comment</button>-->
+<!--            </form>-->
+<!--          </div>-->
+<!--{% endblock  %}-->
