--- a/CrowdFunding/projects/templates/projects/my_projects.html
+++ b/CrowdFunding/projects/templates/projects/my_projects.html
@@ -33,7 +33,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for project in projects %}
+            {% for project in my_projects %}
             <tr>
                 <td>{{project.title}}</td>
                 <td>{{project.details|slice:50}}...</td>
@@ -62,5 +62,40 @@
             {% endfor %}
         </tbody>
     </table>
+
+
+
+  
+
+
+
+
+{% if my_projects.has_other_pages %}
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+    {% if my_projects.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{ my_projects.previous_page_number }}">Previous</a></li>
+    {% else %}
+    <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a></li>
+    {% endif %}
+    {% for i in my_projects.paginator.page_range %}
+      {% if my_projects.number == i %}
+        <li class="page-item active"><a class="page-link" href="">{{ i }}</a></li>
+      {% else %}
+        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if my_projects.has_next %}
+      <li class="page-item" ><a class="page-link" href="?page={{ my_projects.next_page_number }}">Next</a></li>
+    {% else %}
+    <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+    {% endif %}
+    </ul>
+</nav>
+{% endif %}
+  
+
+
+
 </div>
 {% endblock %}
