--- a/CrowdFunding/projects/templates/projects/index.html
+++ b/CrowdFunding/projects/templates/projects/index.html
@@ -45,6 +45,29 @@
             {% endfor %}
         </tbody>
     </table>
+    {% if projects.has_other_pages %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+            {% if projects.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ projects.previous_page_number }}">Previous</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a></li>
+            {% endif %}
+            {% for i in projects.paginator.page_range %}
+            {% if projects.number == i %}
+                <li class="page-item active"><a class="page-link" href="">{{ i }}</a></li>
+            {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+            {% endif %}
+            {% endfor %}
+            {% if projects.has_next %}
+            <li class="page-item" ><a class="page-link" href="?page={{ projects.next_page_number }}">Next</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+            {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
 </div>
 
 {% endblock %}
